feat: simple introduction of Spring into the project

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,200 +5,200 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
   
-  <context-param>
-    <param-name>relativeDatabaseConfigFileLocation</param-name>
-    <param-value>/WEB-INF/classes/db.properties</param-value>
-  </context-param>
-  <context-param>
-    <param-name>relativeTokenManagerConfigFileLocation</param-name>
-    <param-value>/WEB-INF/classes/tokenManager.properties</param-value>
-  </context-param>
-  <context-param>
-    <param-name>relativeBatchLogOutputDirectory</param-name>
-    <param-value>/WEB-INF/logs/</param-value>
-  </context-param>
-  <context-param>
-    <param-name>relativeErrorResponseConfigFileLocation</param-name>
-    <param-value>/WEB-INF/classes/errorResponse.properties</param-value>
-  </context-param>
+<!--  <context-param>-->
+<!--    <param-name>relativeDatabaseConfigFileLocation</param-name>-->
+<!--    <param-value>/WEB-INF/classes/db.properties</param-value>-->
+<!--  </context-param>-->
+<!--  <context-param>-->
+<!--    <param-name>relativeTokenManagerConfigFileLocation</param-name>-->
+<!--    <param-value>/WEB-INF/classes/tokenManager.properties</param-value>-->
+<!--  </context-param>-->
+<!--  <context-param>-->
+<!--    <param-name>relativeBatchLogOutputDirectory</param-name>-->
+<!--    <param-value>/WEB-INF/logs/</param-value>-->
+<!--  </context-param>-->
+<!--  <context-param>-->
+<!--    <param-name>relativeErrorResponseConfigFileLocation</param-name>-->
+<!--    <param-value>/WEB-INF/classes/errorResponse.properties</param-value>-->
+<!--  </context-param>-->
 
-  <filter>
-    <filter-name>LoggingFilter</filter-name>
-    <filter-class>com.local.servlet.LoggingFilter</filter-class>
-  </filter>
-  <filter>
-    <filter-name>ErrorResponseFilter</filter-name>
-    <filter-class>com.local.servlet.ErrorResponseFilter</filter-class>
-  </filter>
-  <filter>
-    <filter-name>AdminAuthorizationFilter</filter-name>
-    <filter-class>com.local.servlet.auth.AdminAuthorizationFilter</filter-class>
-  </filter>
-  <filter>
-    <filter-name>WebUserAuthorizationFilter</filter-name>
-    <filter-class>com.local.servlet.auth.WebUserAuthorizationFilter</filter-class>
-  </filter>
-  <filter>
-    <filter-name>ObjectValidationFilter</filter-name>
-    <filter-class>com.local.servlet.validation.ObjectValidationFilter</filter-class>
-  </filter>
+<!--  <filter>-->
+<!--    <filter-name>LoggingFilter</filter-name>-->
+<!--    <filter-class>com.local.servlet.LoggingFilter</filter-class>-->
+<!--  </filter>-->
+<!--  <filter>-->
+<!--    <filter-name>ErrorResponseFilter</filter-name>-->
+<!--    <filter-class>com.local.servlet.ErrorResponseFilter</filter-class>-->
+<!--  </filter>-->
+<!--  <filter>-->
+<!--    <filter-name>AdminAuthorizationFilter</filter-name>-->
+<!--    <filter-class>com.local.servlet.auth.AdminAuthorizationFilter</filter-class>-->
+<!--  </filter>-->
+<!--  <filter>-->
+<!--    <filter-name>WebUserAuthorizationFilter</filter-name>-->
+<!--    <filter-class>com.local.servlet.auth.WebUserAuthorizationFilter</filter-class>-->
+<!--  </filter>-->
+<!--  <filter>-->
+<!--    <filter-name>ObjectValidationFilter</filter-name>-->
+<!--    <filter-class>com.local.servlet.validation.ObjectValidationFilter</filter-class>-->
+<!--  </filter>-->
 
-  <filter-mapping>
-    <filter-name>LoggingFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <filter-name>ErrorResponseFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <filter-name>AdminAuthorizationFilter</filter-name>
-    <url-pattern>/admin/*</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <filter-name>WebUserAuthorizationFilter</filter-name>
-    <url-pattern>/web-user/*</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <filter-name>ObjectValidationFilter</filter-name>
-    <url-pattern>/admin/add-user</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <filter-name>ObjectValidationFilter</filter-name>
-    <url-pattern>/admin/add-product</url-pattern>
-  </filter-mapping>
+<!--  <filter-mapping>-->
+<!--    <filter-name>LoggingFilter</filter-name>-->
+<!--    <url-pattern>/*</url-pattern>-->
+<!--  </filter-mapping>-->
+<!--  <filter-mapping>-->
+<!--    <filter-name>ErrorResponseFilter</filter-name>-->
+<!--    <url-pattern>/*</url-pattern>-->
+<!--  </filter-mapping>-->
+<!--  <filter-mapping>-->
+<!--    <filter-name>AdminAuthorizationFilter</filter-name>-->
+<!--    <url-pattern>/admin/*</url-pattern>-->
+<!--  </filter-mapping>-->
+<!--  <filter-mapping>-->
+<!--    <filter-name>WebUserAuthorizationFilter</filter-name>-->
+<!--    <url-pattern>/web-user/*</url-pattern>-->
+<!--  </filter-mapping>-->
+<!--  <filter-mapping>-->
+<!--    <filter-name>ObjectValidationFilter</filter-name>-->
+<!--    <url-pattern>/admin/add-user</url-pattern>-->
+<!--  </filter-mapping>-->
+<!--  <filter-mapping>-->
+<!--    <filter-name>ObjectValidationFilter</filter-name>-->
+<!--    <url-pattern>/admin/add-product</url-pattern>-->
+<!--  </filter-mapping>-->
 
-  <listener>
-    <listener-class>com.local.Bootstrap</listener-class>
-  </listener>
+<!--  <listener>-->
+<!--    <listener-class>com.local.Bootstrap</listener-class>-->
+<!--  </listener>-->
 
-  <servlet>
-    <servlet-name>AddUserServlet</servlet-name>
-    <servlet-class>com.local.servlet.usermanagement.AddUserServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>LoginServlet</servlet-name>
-    <servlet-class>com.local.servlet.usermanagement.LoginServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>AddProductServlet</servlet-name>
-    <servlet-class>com.local.servlet.productmanagement.AddProductServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>GetAllProductsServlet</servlet-name>
-    <servlet-class>com.local.servlet.productmanagement.GetAllProductsServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>AddProductToCartServlet</servlet-name>
-    <servlet-class>com.local.servlet.user.AddProductToCartServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>RemoveProductFromCartServlet</servlet-name>
-    <servlet-class>com.local.servlet.user.RemoveProductFromCartServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>GetActiveCartServlet</servlet-name>
-    <servlet-class>com.local.servlet.user.GetActiveCartServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>FinalizePurchaseServlet</servlet-name>
-    <servlet-class>com.local.servlet.user.FinalizePurchaseServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>AddBalanceServlet</servlet-name>
-    <servlet-class>com.local.servlet.payment.AddBalanceServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>GetAllPaymentsServlet</servlet-name>
-    <servlet-class>com.local.servlet.payment.GetAllPaymentsServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>BalancePayServlet</servlet-name>
-    <servlet-class>com.local.servlet.payment.BalancePayServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>CardPayServlet</servlet-name>
-    <servlet-class>com.local.servlet.payment.CardPayServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>CancelPurchaseServlet</servlet-name>
-    <servlet-class>com.local.servlet.user.CancelPurchaseServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>GetPendingPaymentServlet</servlet-name>
-    <servlet-class>com.local.servlet.payment.GetPendingPaymentServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>GetProductsSortedBySoldServlet</servlet-name>
-    <servlet-class>com.local.servlet.productmanagement.GetProductsSortedBySoldServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>GetProductsSortedByAvailableServlet</servlet-name>
-    <servlet-class>com.local.servlet.productmanagement.GetProductsSortedByAvailableServlet</servlet-class>
-  </servlet>
+<!--  <servlet>-->
+<!--    <servlet-name>AddUserServlet</servlet-name>-->
+<!--    <servlet-class>com.local.servlet.usermanagement.AddUserServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet>-->
+<!--    <servlet-name>LoginServlet</servlet-name>-->
+<!--    <servlet-class>com.local.servlet.usermanagement.LoginServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet>-->
+<!--    <servlet-name>AddProductServlet</servlet-name>-->
+<!--    <servlet-class>com.local.servlet.productmanagement.AddProductServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet>-->
+<!--    <servlet-name>GetAllProductsServlet</servlet-name>-->
+<!--    <servlet-class>com.local.servlet.productmanagement.GetAllProductsServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet>-->
+<!--    <servlet-name>AddProductToCartServlet</servlet-name>-->
+<!--    <servlet-class>com.local.servlet.user.AddProductToCartServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet>-->
+<!--    <servlet-name>RemoveProductFromCartServlet</servlet-name>-->
+<!--    <servlet-class>com.local.servlet.user.RemoveProductFromCartServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet>-->
+<!--    <servlet-name>GetActiveCartServlet</servlet-name>-->
+<!--    <servlet-class>com.local.servlet.user.GetActiveCartServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet>-->
+<!--    <servlet-name>FinalizePurchaseServlet</servlet-name>-->
+<!--    <servlet-class>com.local.servlet.user.FinalizePurchaseServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet>-->
+<!--    <servlet-name>AddBalanceServlet</servlet-name>-->
+<!--    <servlet-class>com.local.servlet.payment.AddBalanceServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet>-->
+<!--    <servlet-name>GetAllPaymentsServlet</servlet-name>-->
+<!--    <servlet-class>com.local.servlet.payment.GetAllPaymentsServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet>-->
+<!--    <servlet-name>BalancePayServlet</servlet-name>-->
+<!--    <servlet-class>com.local.servlet.payment.BalancePayServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet>-->
+<!--    <servlet-name>CardPayServlet</servlet-name>-->
+<!--    <servlet-class>com.local.servlet.payment.CardPayServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet>-->
+<!--    <servlet-name>CancelPurchaseServlet</servlet-name>-->
+<!--    <servlet-class>com.local.servlet.user.CancelPurchaseServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet>-->
+<!--    <servlet-name>GetPendingPaymentServlet</servlet-name>-->
+<!--    <servlet-class>com.local.servlet.payment.GetPendingPaymentServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet>-->
+<!--    <servlet-name>GetProductsSortedBySoldServlet</servlet-name>-->
+<!--    <servlet-class>com.local.servlet.productmanagement.GetProductsSortedBySoldServlet</servlet-class>-->
+<!--  </servlet>-->
+<!--  <servlet>-->
+<!--    <servlet-name>GetProductsSortedByAvailableServlet</servlet-name>-->
+<!--    <servlet-class>com.local.servlet.productmanagement.GetProductsSortedByAvailableServlet</servlet-class>-->
+<!--  </servlet>-->
 
-  <servlet-mapping>
-    <servlet-name>AddUserServlet</servlet-name>
-    <url-pattern>/admin/add-user</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>LoginServlet</servlet-name>
-    <url-pattern>/login</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>AddProductServlet</servlet-name>
-    <url-pattern>/admin/add-product</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>GetAllProductsServlet</servlet-name>
-    <url-pattern>/get-all-products</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>AddProductToCartServlet</servlet-name>
-    <url-pattern>/web-user/add-product-to-cart</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>RemoveProductFromCartServlet</servlet-name>
-    <url-pattern>/web-user/remove-product-from-cart</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>GetActiveCartServlet</servlet-name>
-    <url-pattern>/web-user/get-active-cart</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>FinalizePurchaseServlet</servlet-name>
-    <url-pattern>/web-user/finalize-purchase</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>AddBalanceServlet</servlet-name>
-    <url-pattern>/web-user/add-balance</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>GetAllPaymentsServlet</servlet-name>
-    <url-pattern>/admin/get-all-payments</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>BalancePayServlet</servlet-name>
-    <url-pattern>/web-user/balance-pay</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>CardPayServlet</servlet-name>
-    <url-pattern>/web-user/card-pay</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>CancelPurchaseServlet</servlet-name>
-    <url-pattern>/web-user/cancel-payment</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>GetPendingPaymentServlet</servlet-name>
-    <url-pattern>/web-user/get-pending-payment</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>GetProductsSortedBySoldServlet</servlet-name>
-    <url-pattern>/get-products-sorted-by-sold</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>GetProductsSortedByAvailableServlet</servlet-name>
-    <url-pattern>/get-products-sorted-by-available</url-pattern>
-  </servlet-mapping>
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>AddUserServlet</servlet-name>-->
+<!--    <url-pattern>/admin/add-user</url-pattern>-->
+<!--  </servlet-mapping>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>LoginServlet</servlet-name>-->
+<!--    <url-pattern>/login</url-pattern>-->
+<!--  </servlet-mapping>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>AddProductServlet</servlet-name>-->
+<!--    <url-pattern>/admin/add-product</url-pattern>-->
+<!--  </servlet-mapping>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>GetAllProductsServlet</servlet-name>-->
+<!--    <url-pattern>/get-all-products</url-pattern>-->
+<!--  </servlet-mapping>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>AddProductToCartServlet</servlet-name>-->
+<!--    <url-pattern>/web-user/add-product-to-cart</url-pattern>-->
+<!--  </servlet-mapping>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>RemoveProductFromCartServlet</servlet-name>-->
+<!--    <url-pattern>/web-user/remove-product-from-cart</url-pattern>-->
+<!--  </servlet-mapping>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>GetActiveCartServlet</servlet-name>-->
+<!--    <url-pattern>/web-user/get-active-cart</url-pattern>-->
+<!--  </servlet-mapping>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>FinalizePurchaseServlet</servlet-name>-->
+<!--    <url-pattern>/web-user/finalize-purchase</url-pattern>-->
+<!--  </servlet-mapping>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>AddBalanceServlet</servlet-name>-->
+<!--    <url-pattern>/web-user/add-balance</url-pattern>-->
+<!--  </servlet-mapping>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>GetAllPaymentsServlet</servlet-name>-->
+<!--    <url-pattern>/admin/get-all-payments</url-pattern>-->
+<!--  </servlet-mapping>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>BalancePayServlet</servlet-name>-->
+<!--    <url-pattern>/web-user/balance-pay</url-pattern>-->
+<!--  </servlet-mapping>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>CardPayServlet</servlet-name>-->
+<!--    <url-pattern>/web-user/card-pay</url-pattern>-->
+<!--  </servlet-mapping>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>CancelPurchaseServlet</servlet-name>-->
+<!--    <url-pattern>/web-user/cancel-payment</url-pattern>-->
+<!--  </servlet-mapping>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>GetPendingPaymentServlet</servlet-name>-->
+<!--    <url-pattern>/web-user/get-pending-payment</url-pattern>-->
+<!--  </servlet-mapping>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>GetProductsSortedBySoldServlet</servlet-name>-->
+<!--    <url-pattern>/get-products-sorted-by-sold</url-pattern>-->
+<!--  </servlet-mapping>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>GetProductsSortedByAvailableServlet</servlet-name>-->
+<!--    <url-pattern>/get-products-sorted-by-available</url-pattern>-->
+<!--  </servlet-mapping>-->
 </web-app>
