--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
   
 <!--  <context-param>-->
 <!--    <param-name>relativeDatabaseConfigFileLocation</param-name>-->
-<!--    <param-value>/WEB-INF/classes/db.properties</param-value>-->
+<!--    <param-value>/WEB-INF/classes/application.properties</param-value>-->
 <!--  </context-param>-->
 <!--  <context-param>-->
 <!--    <param-name>relativeTokenManagerConfigFileLocation</param-name>-->
