--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 src/main/resources/application.properties
 TODO.txt
 concurrent_curl.bat
+log/
 db/mem/
 db/online-shop.mv.db
 db/online-shop.trace.db
