--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
       <artifactId>jakarta.annotation-api</artifactId>
       <version>3.0.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.22</version>
+    </dependency>
   </dependencies>
 
   <build>
