feat: added a better payment structure and related classes

--- a/src/main/resources/errorResponse.properties
+++ b/src/main/resources/errorResponse.properties
@@ -14,3 +14,5 @@ PendingPaymentNotFoundException=404
 PreviousPaymentPendingException=403
 PaymentInProgressException=403
 InvalidProductPriceException=422
+DuplicateCardException=409
+CardNotFoundException=404
