feat: web DTOs added

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -57,15 +57,15 @@
 <!--  </filter-mapping>-->
 <!--  <filter-mapping>-->
 <!--    <filter-name>WebUserAuthorizationFilter</filter-name>-->
-<!--    <url-pattern>/web-user/*</url-pattern>-->
+<!--    <url-pattern>/web-userId/*</url-pattern>-->
 <!--  </filter-mapping>-->
 <!--  <filter-mapping>-->
 <!--    <filter-name>ObjectValidationFilter</filter-name>-->
-<!--    <url-pattern>/admin/add-user</url-pattern>-->
+<!--    <url-pattern>/admin/add-userId</url-pattern>-->
 <!--  </filter-mapping>-->
 <!--  <filter-mapping>-->
 <!--    <filter-name>ObjectValidationFilter</filter-name>-->
-<!--    <url-pattern>/admin/add-product</url-pattern>-->
+<!--    <url-pattern>/admin/add-productName</url-pattern>-->
 <!--  </filter-mapping>-->
 
 <!--  <listener>-->
@@ -90,19 +90,19 @@
 <!--  </servlet>-->
 <!--  <servlet>-->
 <!--    <servlet-name>AddProductToCartServlet</servlet-name>-->
-<!--    <servlet-class>com.local.servlet.user.AddProductToCartServlet</servlet-class>-->
+<!--    <servlet-class>com.local.servlet.userId.AddProductToCartServlet</servlet-class>-->
 <!--  </servlet>-->
 <!--  <servlet>-->
 <!--    <servlet-name>RemoveProductFromCartServlet</servlet-name>-->
-<!--    <servlet-class>com.local.servlet.user.RemoveProductFromCartServlet</servlet-class>-->
+<!--    <servlet-class>com.local.servlet.userId.RemoveProductFromCartServlet</servlet-class>-->
 <!--  </servlet>-->
 <!--  <servlet>-->
 <!--    <servlet-name>GetActiveCartServlet</servlet-name>-->
-<!--    <servlet-class>com.local.servlet.user.GetActiveCartServlet</servlet-class>-->
+<!--    <servlet-class>com.local.servlet.userId.GetActiveCartServlet</servlet-class>-->
 <!--  </servlet>-->
 <!--  <servlet>-->
 <!--    <servlet-name>FinalizePurchaseServlet</servlet-name>-->
-<!--    <servlet-class>com.local.servlet.user.FinalizePurchaseServlet</servlet-class>-->
+<!--    <servlet-class>com.local.servlet.userId.FinalizePurchaseServlet</servlet-class>-->
 <!--  </servlet>-->
 <!--  <servlet>-->
 <!--    <servlet-name>AddBalanceServlet</servlet-name>-->
@@ -122,7 +122,7 @@
 <!--  </servlet>-->
 <!--  <servlet>-->
 <!--    <servlet-name>CancelPurchaseServlet</servlet-name>-->
-<!--    <servlet-class>com.local.servlet.user.CancelPurchaseServlet</servlet-class>-->
+<!--    <servlet-class>com.local.servlet.userId.CancelPurchaseServlet</servlet-class>-->
 <!--  </servlet>-->
 <!--  <servlet>-->
 <!--    <servlet-name>GetPendingPaymentServlet</servlet-name>-->
@@ -139,7 +139,7 @@
 
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>AddUserServlet</servlet-name>-->
-<!--    <url-pattern>/admin/add-user</url-pattern>-->
+<!--    <url-pattern>/admin/add-userId</url-pattern>-->
 <!--  </servlet-mapping>-->
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>LoginServlet</servlet-name>-->
@@ -147,7 +147,7 @@
 <!--  </servlet-mapping>-->
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>AddProductServlet</servlet-name>-->
-<!--    <url-pattern>/admin/add-product</url-pattern>-->
+<!--    <url-pattern>/admin/add-productName</url-pattern>-->
 <!--  </servlet-mapping>-->
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>GetAllProductsServlet</servlet-name>-->
@@ -155,23 +155,23 @@
 <!--  </servlet-mapping>-->
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>AddProductToCartServlet</servlet-name>-->
-<!--    <url-pattern>/web-user/add-product-to-cart</url-pattern>-->
+<!--    <url-pattern>/web-userId/add-productName-to-cart</url-pattern>-->
 <!--  </servlet-mapping>-->
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>RemoveProductFromCartServlet</servlet-name>-->
-<!--    <url-pattern>/web-user/remove-product-from-cart</url-pattern>-->
+<!--    <url-pattern>/web-userId/remove-productName-from-cart</url-pattern>-->
 <!--  </servlet-mapping>-->
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>GetActiveCartServlet</servlet-name>-->
-<!--    <url-pattern>/web-user/get-active-cart</url-pattern>-->
+<!--    <url-pattern>/web-userId/get-active-cart</url-pattern>-->
 <!--  </servlet-mapping>-->
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>FinalizePurchaseServlet</servlet-name>-->
-<!--    <url-pattern>/web-user/finalize-purchase</url-pattern>-->
+<!--    <url-pattern>/web-userId/finalize-purchase</url-pattern>-->
 <!--  </servlet-mapping>-->
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>AddBalanceServlet</servlet-name>-->
-<!--    <url-pattern>/web-user/add-balance</url-pattern>-->
+<!--    <url-pattern>/web-userId/add-balance</url-pattern>-->
 <!--  </servlet-mapping>-->
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>GetAllPaymentsServlet</servlet-name>-->
@@ -179,19 +179,19 @@
 <!--  </servlet-mapping>-->
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>BalancePayServlet</servlet-name>-->
-<!--    <url-pattern>/web-user/balance-pay</url-pattern>-->
+<!--    <url-pattern>/web-userId/balance-pay</url-pattern>-->
 <!--  </servlet-mapping>-->
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>CardPayServlet</servlet-name>-->
-<!--    <url-pattern>/web-user/card-pay</url-pattern>-->
+<!--    <url-pattern>/web-userId/card-pay</url-pattern>-->
 <!--  </servlet-mapping>-->
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>CancelPurchaseServlet</servlet-name>-->
-<!--    <url-pattern>/web-user/cancel-payment</url-pattern>-->
+<!--    <url-pattern>/web-userId/cancel-payment</url-pattern>-->
 <!--  </servlet-mapping>-->
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>GetPendingPaymentServlet</servlet-name>-->
-<!--    <url-pattern>/web-user/get-pending-payment</url-pattern>-->
+<!--    <url-pattern>/web-userId/get-pending-payment</url-pattern>-->
 <!--  </servlet-mapping>-->
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>GetProductsSortedBySoldServlet</servlet-name>-->
