--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,4 +1,4 @@
 hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
 hibernate.jdbc.batch_size=10
 hibernate.jdbc.fetch_size=50
